# EDD

2019-S1/Practica 1/201700893/201700893/: CMakeLists.txt
2019-S1/Practica 1/201700893/201700893/.ngrest/: services
2019-S1/Practica 1/201700893/201700893/eddpractica1/: CMakeLists.txt
2019-S1/Practica 1/201700893/201700893/eddpractica1/src/: eddpractica1.cpp  eddpractica1.h  estructuras.cpp  estructuras.h  nodos.cpp  nodos.h
2019-S1/Proyecto1/BackEnd/eddproyecto1/: CMakeLists.txt  arbol.dot  lista.dot
2019-S1/Proyecto1/BackEnd/eddproyecto1/.ngrest/: services
2019-S1/Proyecto1/BackEnd/eddproyecto1/eddproyecto1/: CMakeLists.txt
2019-S1/Proyecto1/BackEnd/eddproyecto1/eddproyecto1/src/: eddproyecto1.cpp  eddproyecto1.h  estructura.cpp  estructura.h  nodo.cpp  nodo.h
2019-S1/Proyecto1/FrontEnd/FrontEndProyecto1/: package-lock.json  package.json
2019-S1/Proyecto1/FrontEnd/FrontEndProyecto1/archivos/: authentication-login.html  charts.html  index2.html  pages-calendar.html  tables.html
2019-S1/Proyecto2/FrontEndProyecto1/: app.js
2019-S1/Proyecto2/FrontEndProyecto1/archivos/: authentication-login.html  authentication-register.html  index.html  index2.html  pages-calendar.html  pages-gallery.html  tables.html
2019-S1/Proyecto2/JAVA/edd/: pom.xml
2019-VJ/Estructuras/Lineales/build-estructuras-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
2019-VJ/Estructuras/Lineales/estructuras/: main.cpp
2019-VJ/Practica/: Requerimientos.docx
2019-VJ/Practica/201700893/PracticaEstructurasDeDatos_VacacionesJunio2019/: Caja.cpp  Caja.h  Carreta.cpp  Carreta.h  Cliente.cpp  Cliente.h  ColaClientes.cpp  ColaClientes.h  ListaCajas.cpp  ListaCajas.h  ListaClientes.cpp  ListaClientes.h  NodoColaClientes.cpp  NodoColaClientes.h  NodoListaCajas.cpp  NodoListaCajas.h  NodoListaCompra.cpp  NodoListaCompra.h  NodoPilaCarretas.cpp  NodoPilaCarretas.h  PilaCarretas.cpp  PilaCarretas.h  main.cpp
2019-VJ/Proyectos/Proyecto 1 C++/201700893/Proyecto1EDD/: ArbolABB.cpp  ArbolABB.h  (+34 more)
2019-VJ/Proyectos/Proyecto 2 Java/: Paises.txt  Requerimientos.docx  Vuelos.txt
2019-VJ/Proyectos/Proyecto 2 Java/Cali/: Arbol.dot  graficaArbolMatriz.dot  graficaGrafoRuta.dot  graficaMatrizRuta.dot  graficaRutaCompleta.dot  graficaTablaHash.dot
2019-VJ/Tareas/: Mitologia.mdj
2019-VJ/Tests/Hoja1/: main.cpp
2019-VJ/Tests/Prueba 1/build-hola_mundo-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
2019-VJ/Tests/build-Hoja1-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
(+118 files in other folders)
